<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="music_number">1</string>
    <string name="music_name">舍离去</string>
    <string name="music_type">Pop</string>
    <string name="music_singer">王子健</string>
    <string name="time">00:00</string>
    <string name="music">歌曲</string>
    <string name="MV">MV</string>
    <string name="close">关闭</string>
</resources>