<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/music_item"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@color/white"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/music_number"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_margin="20dp"
        android:text="@string/music_number"
        android:textColor="@color/black"
        android:textSize="25sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">
        <TextView
            android:id="@+id/music_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/music_name"
            android:textColor="@color/black"
            android:textSize="25sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/music_type"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/music_type"
                android:textColor="@color/grey2"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/music_singer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:text="@string/music_singer"
                android:textColor="@color/grey2"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>