<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MusicPlayer">
    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@null"
        android:src="@drawable/back"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/music"
        android:textColor="@color/black"
        android:textSize="22sp"/>
    <com.example.musicplayer.CircleImageView
        android:id="@+id/music_picture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/slq"/>
    <TextView
        android:id="@id/music_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_marginStart="10dp"
        android:text="@string/music_type"
        android:textColor="@color/black"
        android:textSize="18sp"/>
    <TextView
        android:id="@id/music_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="430dp"
        android:layout_marginStart="10dp"
        android:text="@string/music_name"
        android:textColor="@color/black"
        android:textSize="25sp"/>
    <ImageButton
        android:id="@+id/love"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="430dp"
        android:background="@null"
        android:src="@drawable/like"/>
    <TextView
        android:id="@id/music_singer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="470dp"
        android:layout_marginStart="10dp"
        android:text="@string/music_singer"
        android:textColor="@color/black"
        android:textSize="18sp"/>
    <SeekBar
        android:id="@+id/sb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="600dp"/>
    <TextView
        android:id="@+id/music_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="630dp"
        android:layout_marginStart="10dp"
        android:text="@string/time"
        android:textColor="@color/black"
        android:textSize="15sp"/>
    <TextView
        android:id="@+id/music_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="630dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:text="@string/time"
        android:textColor="@color/black"
        android:textSize="15sp"/>
    <ImageButton
        android:id="@+id/play_type"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_toStartOf="@id/last"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="687dp"
        android:background="@null"
        android:src="@drawable/play_cycle"/>
    <ImageButton
        android:id="@+id/last"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_toStartOf="@id/play"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="682dp"
        android:background="@drawable/grey_circle"
        android:src="@drawable/last"/>
    <ImageButton
        android:id="@+id/play"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="680dp"
        android:background="@drawable/grey_circle"
        android:src="@drawable/play_one"/>
    <ImageButton
        android:id="@+id/next"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_toEndOf="@id/play"
        android:layout_marginStart="35dp"
        android:layout_marginTop="682dp"
        android:background="@drawable/grey_circle"
        android:src="@drawable/next"/>
    <ImageButton
        android:id="@+id/play_list"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_toEndOf="@id/next"
        android:layout_marginStart="25dp"
        android:layout_marginTop="687dp"
        android:background="@null"
        android:src="@drawable/theme"/>
</RelativeLayout>